--- a/RecycleProject/View/Base.lproj/Main.storyboard
+++ b/RecycleProject/View/Base.lproj/Main.storyboard
@@ -194,6 +194,7 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9gc-Up-hsx">
                                         <rect key="frame" x="20" y="341.33333333333337" width="335" height="302.33333333333337"/>
                                         <color key="backgroundColor" name="CustomBackgroundColor"/>
+                                        <color key="tintColor" name="CustomTabBarTintColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="Afs-4r-ief"/>
                                         </constraints>
